# thonny-tunisiaschools

./: .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: python-publish.yml
thonnycontrib/tunisiaschools/: UIViewer.py  __init__.py
